--- a/graduate-front/src/modules/shared/pages/finish-order/finish-order.component.html
+++ b/graduate-front/src/modules/shared/pages/finish-order/finish-order.component.html
@@ -64,7 +64,7 @@
                     </mat-form-field>
                 </div>
 
-                <mat-form-field appearance="fill" style="max-width: 33rem; margin-top: 1rem;">
+                <mat-form-field appearance="fill" style="width: 27.1rem; margin-top: 1rem;">
                     <mat-label class="font-size-label">Adresa</mat-label>
                     <input
                         type="text"
