--- a/graduate-front/src/modules/shared/components/reject-order-dialog/reject-order-dialog.component.scss
+++ b/graduate-front/src/modules/shared/components/reject-order-dialog/reject-order-dialog.component.scss
@@ -30,6 +30,7 @@
     font-size: 1rem;
     color:var(--deep-blue);
     background-color: var(--white);
+    font-family: Arial, Helvetica, sans-serif;
   }
   
   .center-buttons {
