--- a/graduate-front/src/modules/shared/pages/order/order.component.scss
+++ b/graduate-front/src/modules/shared/pages/order/order.component.scss
@@ -12,6 +12,9 @@
 
 .margin-top {
     margin-top: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 a {
@@ -46,7 +49,6 @@ h1, h2 {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    margin-top: 20px;
 }
 
 .data {
